k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk044-sk-agentry-fe
  namespace: skala-practice
spec:
  selector:
    app: sk044-sk-agentry-fe
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
