k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk044-cm-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
  - host: sk044-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - backend:
          service:
            name: sk044-sk-agentry-fe
            port:
              number: 8080
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: sk044-sk-agentry-fe
            port:
              number: 8081
        path: /actuator
        pathType: Prefix
      - backend:
          service:
            name: sk044-sk-agentry-fe
            port:
              number: 8080
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: sk044-sk-agentry-fe
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sk044-tls.skala25a.project.skala-ai.com
    secretName: sk044-cm-auto-tls-secret
